HW 5 without animation

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
               alt="людина друкує на клавіатурі"
               width="370"
             />
+            <h3 class="proccess-subtitle">Десктопні додатки</h3>
           </li>
           <li class="work-proccess-item">
             <img
@@ -147,13 +148,16 @@
               alt="людина працює з телефоном і компютером"
               width="370"
             />
+            <h3 class="proccess-subtitle">Мобільні додатки</h3>
           </li>
           <li class="work-proccess-item">
             <img
+              class="img-proccess"
               src="./images/our_team/what_we_do_pic3.jpg"
               alt="людина малює на планшеті"
               width="370"
             />
+            <h3 class="proccess-subtitle">Дизайнерські рішення</h3>
           </li>
         </ul>
       </section>
@@ -173,32 +177,40 @@
                 <p class="team-member-description">Product Designer</p>
                 <ul class="team-member-sm">
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -215,32 +227,40 @@
                 <p class="team-member-description">Frontend Developer</p>
                 <ul class="team-member-sm">
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -257,32 +277,40 @@
                 <p class="team-member-description">Marketing</p>
                 <ul class="team-member-sm">
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -299,32 +327,40 @@
                 <p class="team-member-description">UI Designer</p>
                 <ul class="team-member-sm">
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="member-sm-item">
-                    <svg class="member-sm-icon" width="20" height="20">
-                      <use
-                        href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="member-sm-icon" width="20" height="20">
+                        <use
+                          href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -336,46 +372,58 @@
         <h2 class="clients-title">Постійні клієнти</h2>
         <ul class="clients-list">
           <li class="clients-item">
-            <svg class="clients-icon" width="41" height="46">
-              <use
-                href="./images/svg__sprite/symbol-defs.svg#icon-company1"
-              ></use>
-            </svg>
+            <a href="#">
+              <svg class="clients-icon" width="41" height="46">
+                <use
+                  href="./images/svg__sprite/symbol-defs.svg#icon-company1"
+                ></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-item">
-            <svg class="clients-icon" width="40" height="52">
-              <use
-                href="./images/svg__sprite/symbol-defs.svg#icon-company2"
-              ></use>
-            </svg>
+            <a href="#">
+              <svg class="clients-icon" width="40" height="52">
+                <use
+                  href="./images/svg__sprite/symbol-defs.svg#icon-company2"
+                ></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-item">
-            <svg class="clients-icon" width="43" height="41">
-              <use
-                href="./images/svg__sprite/symbol-defs.svg#icon-company3"
-              ></use>
-            </svg>
+            <a href="#">
+              <svg class="clients-icon" width="43" height="41">
+                <use
+                  href="./images/svg__sprite/symbol-defs.svg#icon-company3"
+                ></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-item">
-            <svg class="clients-icon" width="84" height="41">
-              <use
-                href="./images/svg__sprite/symbol-defs.svg#icon-company4"
-              ></use>
-            </svg>
+            <a href="#">
+              <svg class="clients-icon" width="84" height="41">
+                <use
+                  href="./images/svg__sprite/symbol-defs.svg#icon-company4"
+                ></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-item">
-            <svg class="clients-icon" width="63" height="45">
-              <use
-                href="./images/svg__sprite/symbol-defs.svg#icon-company5"
-              ></use>
-            </svg>
+            <a href="#">
+              <svg class="clients-icon" width="63" height="45">
+                <use
+                  href="./images/svg__sprite/symbol-defs.svg#icon-company5"
+                ></use>
+              </svg>
+            </a>
           </li>
           <li class="clients-item">
-            <svg class="clients-icon" width="98" height="44">
-              <use
-                href="./images/svg__sprite/symbol-defs.svg#icon-company6"
-              ></use>
-            </svg>
+            <a href="#">
+              <svg class="clients-icon" width="98" height="44">
+                <use
+                  href="./images/svg__sprite/symbol-defs.svg#icon-company6"
+                ></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </section>
@@ -404,30 +452,30 @@
         </div>
         <div class="footer-sm-container">
           <span class="sm-container-title">Приєднуйтесь</span>
-          <ul class="team-member-sm">
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+          <ul class="social-media">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
                 ></use>
               </svg>
             </li>
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
                 ></use>
               </svg>
             </li>
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
                 ></use>
               </svg>
             </li>
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
                 ></use>
@@ -437,5 +485,14 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden">
+      <div class="modal">
+        <button class="modal-button">
+          <svg class="modal-button-icon" width="11" height="11">
+            <use href="./images/svg__sprite/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
