--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,12 @@
           >
           <ul class="nav-menu">
             <li class="nav-menu-item">
-              <a class="nav-menu-link color-modify" href="./index.html"
-                >Студія</a
-              >
+              <a class="nav-menu-link" href="./index.html">Студія</a>
             </li>
             <li class="nav-menu-item">
-              <a class="nav-menu-link" href="./portfolio.html">Портфоліо</a>
+              <a class="nav-menu-link color-modify" href="./portfolio.html"
+                >Портфоліо</a
+              >
             </li>
             <li class="nav-menu-item">
               <a class="nav-menu-link" href="#">Контакти</a>
@@ -67,126 +67,207 @@
         <section class="section portfolio-section">
           <h1 hidden>Портфоліо проекти</h1>
           <ul class="portfolio-filter-list">
-            <li class="portfolio-item">
+            <li class="portfolio-button">
               <button class="filter-button bg-modify" type="button">Усі</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-button">
               <button class="filter-button" type="button">Веб-сайти</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-button">
               <button class="filter-button" type="button">Додатки</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-button">
               <button class="filter-button" type="button">Дизайн</button>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-button">
               <button class="filter-button" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="portfolio-projects">
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image1.jpg"
-                alt="ноутбук"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image1.jpg"
+                  alt="ноутбук"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Технокряк</h3>
                 <p class="project-type">Веб-сайт</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image2.jpg"
-                alt="люди грають в баскетбол"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image2.jpg"
+                  alt="люди грають в баскетбол"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                 <p class="project-type">Дизайн</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image3.jpg"
-                alt="логотип з рибою"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image3.jpg"
+                  alt="логотип з рибою"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Ресторан Seafood</h3>
                 <p class="project-type">Додаток</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image4.jpg"
-                alt="навушники"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image4.jpg"
+                  alt="навушники"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Проєкт Prime</h3>
                 <p class="project-type">Маркетинг</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image5.jpg"
-                alt="коробки"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image5.jpg"
+                  alt="коробки"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Проєкт Boxes</h3>
                 <p class="project-type">Додаток</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image6.jpg"
-                alt="комп'ютер з картою"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image6.jpg"
+                  alt="комп'ютер з картою"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Inspiration has no Borders</h3>
                 <p class="project-type">Веб-сайт</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image7.jpg"
-                alt="розгорнений журнал"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image7.jpg"
+                  alt="розгорнений журнал"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Видання Limited Edition</h3>
                 <p class="project-type">Дизайн</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image8.jpg"
-                alt="лейбл"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image8.jpg"
+                  alt="лейбл"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Проєкт LAB</h3>
                 <p class="project-type">Маркетинг</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="project-image"
-                src="./images/portfolio/portfolio_image9.jpg"
-                alt="людина працює за ноутбуком"
-                width="370"
-              />
+              <div class="project-pic-description">
+                <img
+                  class="project-image"
+                  src="./images/portfolio/portfolio_image9.jpg"
+                  alt="людина працює за ноутбуком"
+                  width="370"
+                />
+                <div class="project-description-bg">
+                  <p class="project-description">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="add-border">
                 <h3 class="project-name">Growing Business</h3>
                 <p class="project-type">Додаток</p>
@@ -220,30 +301,30 @@
         </div>
         <div class="footer-sm-container">
           <span class="sm-container-title">Приєднуйтесь</span>
-          <ul class="team-member-sm">
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+          <ul class="social-media">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
                 ></use>
               </svg>
             </li>
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
                 ></use>
               </svg>
             </li>
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
                 ></use>
               </svg>
             </li>
-            <li class="member-sm-item">
-              <svg class="member-sm-icon" width="20" height="20">
+            <li class="sm-item">
+              <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
                 ></use>
